Added functioning button for user input

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
       <form id="beep-boop">
         <div class="form-group">
-          <label for="number">Enter a number:</label>
-          <input id="number" type="text">
+          <label for="numberUserTxt">Enter a number:</label>
+          <input id="numberUserTxt" type="text">
         </div>
 
         <button type="submit" class="btn">Submit!</button>
