--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -7,9 +8,10 @@
     <script src="js/scripts.js"></script>
     <title>BEEP BOOP!</title>
   </head>
+
   <body>
     <div class="container">
-      <h1>BEEP BOOP</h1>
+      <h1>BEEP BOOP GENERATOR</h1>
 
       <form id="beep-boop">
         <div class="form-group">
